--- a/style.css
+++ b/style.css
@@ -90,8 +90,8 @@ header a{
     top:0px;
     z-index: 9999;
     /* padding-left: 30px; */
-    padding-right: 30px;
-    padding-left: 30px;
+    /* padding-right: 30px; */
+    /* padding-left: 30px; */
     
     
     
@@ -105,7 +105,7 @@ header a{
 
     margin-left: 20px;
     font-weight:bold;
-
+    padding-left: 30px;
     color: white;
     width: 45%;
     font-size: 21px;
